XWIKI-18304: Misalignment issue and unneeded scroll bar on the Version conflict box
- Introduction of a new diff-line-decision class to help the css selection
- Prevent the white-space pre-wrap on the diff decision td and apply it on the proposed decisions instead
- Uniformize the padding to keep an uniform view when switching between the proposed decisions.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
@@ -55,6 +55,21 @@ td.diff-line {
   white-space: pre-wrap;
 }
 
+/*
+Prevent the code formatting for diff lines containing a decision form as it breaks the display of the form.
+The code formatting and long line wrapping is instead applied on the proposed decisions preview contained in the line. 
+*/
+td.diff-line.diff-line-decision {
+  white-space: normal;
+  padding: 0.5em;
+}
+
+td.diff-line.diff-line-decision span.diff-decision {
+  /* Preserve code formatting and also wrap long lines that exceed the available width. */
+  white-space: pre-wrap;
+  width: 70%;
+}
+
 .diff-line-added {
   background-color: #DDFFDD;
   color: #000;
@@ -91,7 +106,6 @@ td.diff-line-meta {
 }
 
 span.diff-decision {
-  padding-top: 10px;
   display: inline-block;
 }
 
